refactor: support Java 8 runtime