@@ -3,13 +3,14 @@ package cn.kjky.collector.arms;
 import cn.kjky.collector.config.CollectorConfig;
 import cn.kjky.collector.config.SecretResolver;
 
-import java.net.URI;
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.net.URLEncoder;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
-import java.time.Duration;
 import java.util.Base64;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -18,8 +19,6 @@ import java.util.Map;
 public final class ArmsDatasetApi implements ArmsApi {
     /** Dataset URL 和凭据变量名配置。 */
     private final CollectorConfig.ArmsConfig config;
-    /** 复用连接的 JDK HTTP 客户端。 */
-    private final HttpClient client;
     /** Dataset 用户名，同时作为请求中的 _userId。 */
     private final String username;
     /** 可选 HTTP Basic 密码；现场接口不要求时为 null。 */
@@ -39,7 +38,6 @@ public final class ArmsDatasetApi implements ArmsApi {
         this.username = secrets.required(config.dataset.usernameEnv);
         this.password = secrets.optional(config.dataset.passwordEnv);
         this.timeoutSeconds = timeoutSeconds;
-        this.client = HttpClient.newBuilder().connectTimeout(Duration.ofSeconds(timeoutSeconds)).build();
     }
 
     /**
@@ -60,26 +58,47 @@ public final class ArmsDatasetApi implements ArmsApi {
         StringBuilder body = new StringBuilder();
         form.forEach((k, v) -> {
             if (v == null) return;
-            if (!body.isEmpty()) body.append('&');
-            body.append(enc(k)).append('=').append(enc(v));
+            if (body.length() > 0) body.append('&');
+            try {
+                body.append(enc(k)).append('=').append(enc(v));
+            } catch (java.io.UnsupportedEncodingException e) {
+                throw new IllegalStateException("JVM 不支持 UTF-8", e);
+            }
         });
-        // builder 先构造公共请求头；若有密码，后续再加入 Basic Authorization。
-        HttpRequest.Builder builder = HttpRequest.newBuilder(URI.create(config.dataset.url))
-                .timeout(Duration.ofSeconds(Math.max(1, timeoutSeconds)))
-                .header("Content-Type", "application/x-www-form-urlencoded; charset=UTF-8")
-                .POST(HttpRequest.BodyPublishers.ofString(body.toString()));
+
+        // Java 8 没有 java.net.http.HttpClient，因此使用标准库 HttpURLConnection。
+        HttpURLConnection connection = (HttpURLConnection) new URL(config.dataset.url).openConnection();
+        int timeoutMillis = (int) Math.min(Integer.MAX_VALUE, Math.max(1, timeoutSeconds) * 1000L);
+        connection.setConnectTimeout(timeoutMillis);
+        connection.setReadTimeout(timeoutMillis);
+        connection.setRequestMethod("POST");
+        connection.setDoOutput(true);
+        connection.setRequestProperty("Content-Type", "application/x-www-form-urlencoded; charset=UTF-8");
         if (password != null) {
             // credential 是 username:password 的 Base64，仅用于当前请求头，绝不输出。
-            String credential = Base64.getEncoder().encodeToString((username + ":" + password).getBytes(StandardCharsets.UTF_8));
-            builder.header("Authorization", "Basic " + credential);
+            String credential = Base64.getEncoder().encodeToString(
+                    (username + ":" + password).getBytes(StandardCharsets.UTF_8));
+            connection.setRequestProperty("Authorization", "Basic " + credential);
         }
-        // response 使用 UTF-8 字符串保留 Dataset 返回的原始 JSON。
-        HttpResponse<String> response = client.send(builder.build(), HttpResponse.BodyHandlers.ofString(StandardCharsets.UTF_8));
-        if (response.statusCode() == 408 || response.statusCode() == 429 || response.statusCode() >= 500) {
-            throw new java.io.IOException("Dataset HTTP 暂时失败: " + response.statusCode());
+
+        try {
+            byte[] requestBody = body.toString().getBytes(StandardCharsets.UTF_8);
+            connection.setFixedLengthStreamingMode(requestBody.length);
+            try (OutputStream out = connection.getOutputStream()) {
+                out.write(requestBody);
+            }
+
+            int status = connection.getResponseCode();
+            InputStream responseStream = status >= 400 ? connection.getErrorStream() : connection.getInputStream();
+            String responseBody = responseStream == null ? "" : readUtf8(responseStream);
+            if (status == 408 || status == 429 || status >= 500) {
+                throw new IOException("Dataset HTTP 暂时失败: " + status);
+            }
+            if (status >= 400) throw new IllegalStateException("Dataset HTTP 请求失败: " + status);
+            return new ApiResponse(responseBody, status, connection.getHeaderField("x-acs-request-id"));
+        } finally {
+            connection.disconnect();
         }
-        if (response.statusCode() >= 400) throw new IllegalStateException("Dataset HTTP 请求失败: " + response.statusCode());
-        return new ApiResponse(response.body(), response.statusCode(), response.headers().firstValue("x-acs-request-id").orElse(null));
     }
 
     /**
@@ -88,5 +107,25 @@ public final class ArmsDatasetApi implements ArmsApi {
      * @param value 原始表单文本
      * @return URL 编码后的文本
      */
-    private String enc(String value) { return URLEncoder.encode(value, StandardCharsets.UTF_8); }
+    private String enc(String value) throws java.io.UnsupportedEncodingException {
+        return URLEncoder.encode(value, "UTF-8");
+    }
+
+    /**
+     * 读取并关闭 HTTP 响应流。
+     *
+     * @param input 响应输入流
+     * @return UTF-8 响应正文
+     * @throws IOException 读取失败
+     */
+    private String readUtf8(InputStream input) throws IOException {
+        try (InputStream in = input; ByteArrayOutputStream out = new ByteArrayOutputStream()) {
+            byte[] buffer = new byte[8192];
+            int count;
+            while ((count = in.read(buffer)) != -1) {
+                out.write(buffer, 0, count);
+            }
+            return new String(out.toByteArray(), StandardCharsets.UTF_8);
+        }
+    }
 }
